<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <TextView
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:id="@+id/carpark_text" android:textAlignment="center"
                android:text="@string/car_text" android:textSize="24sp" android:textStyle="bold"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto"/>
        <Button
                android:text="@string/car_one"
                android:layout_width="238dp"
                android:layout_height="115dp"
                android:id="@+id/car_one_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/carpark_text"
                app:layout_constraintBottom_toTopOf="@+id/car_two_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="@font/roboto" tools:visibility="visible"/>
        <Button
                android:text="@string/car_two"
                android:layout_width="238dp"
                android:layout_height="115dp"
                android:id="@+id/car_two_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/car_one_button"
                app:layout_constraintBottom_toTopOf="@+id/car_three_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="@font/roboto" tools:visibility="visible"/>
        <Button
                android:text="@string/car_three"
                android:layout_width="238dp"
                android:layout_height="115dp"
                android:id="@+id/car_three_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_two_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="@font/roboto" tools:visibility="visible"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNameOne_edit"
                android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/carpark_text"
                app:layout_constraintBottom_toTopOf="@+id/carNumOne_edit" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_name_txt"
        />
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNumOne_edit"
                android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/carNameOne_edit"
                app:layout_constraintBottom_toTopOf="@+id/carBrandOne_edit" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_num_text"
        />
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carBrandOne_edit"
                android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/carNumOne_edit"
                app:layout_constraintBottom_toTopOf="@+id/updateOne_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                android:hint="@string/car_brand_text"/>
        <Button
                android:text="@string/update_car_button"
                android:layout_width="284dp"
                android:layout_height="84dp"
                android:id="@+id/updateOne_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/carBrandOne_edit"
                app:layout_constraintBottom_toTopOf="@+id/deleteOne_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.494"/>
        <Button
                android:text="@string/delete_car_button"
                android:layout_width="284dp"
                android:layout_height="76dp"
                android:id="@+id/deleteOne_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateOne_button" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.494"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNameTwo_edit"
                android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/carpark_text"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_name_txt"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/carNumTwo_edit"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNumTwo_edit"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_num_text"
                app:layout_constraintTop_toBottomOf="@+id/carNameTwo_edit"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/carBrandTwo_edit"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carBrandTwo_edit"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                android:hint="@string/car_brand_text"
                app:layout_constraintTop_toBottomOf="@+id/carNumTwo_edit"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/updateTwo_button"/>
        <Button
                android:text="@string/update_car_button"
                android:layout_width="284dp"
                android:layout_height="84dp"
                android:id="@+id/updateTwo_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/carBrandTwo_edit"
                app:layout_constraintBottom_toTopOf="@+id/deleteTwo_button"/>
        <Button
                android:text="@string/delete_car_button"
                android:layout_width="284dp"
                android:layout_height="76dp"
                android:id="@+id/deleteTwo_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateTwo_button"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNameThree_edit"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_name_txt"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/carpark_text"
                app:layout_constraintBottom_toTopOf="@+id/carNumThree_edit"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carNumThree_edit"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone" android:hint="@string/car_num_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/carNameThree_edit"
                app:layout_constraintBottom_toTopOf="@+id/carBrandThree_edit"/>
        <EditText
                android:layout_width="281dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/carBrandThree_edit"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                android:hint="@string/car_brand_text" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/carNumThree_edit"
                app:layout_constraintBottom_toTopOf="@+id/updateThree_button"/>
        <Button
                android:text="@string/update_car_button"
                android:layout_width="284dp"
                android:layout_height="84dp"
                android:id="@+id/updateThree_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/carBrandThree_edit"
                app:layout_constraintBottom_toTopOf="@+id/deleteThree_button"/>
        <Button
                android:text="@string/delete_car_button"
                android:layout_width="284dp"
                android:layout_height="76dp"
                android:id="@+id/deleteThree_button" android:textAlignment="center"
                android:textSize="18sp" android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateThree_button"/>
    </android.support.constraint.ConstraintLayout>
</layout>
